Changes
-------

1.3 (dev)

- Django 2.0 compatable (Issue #46)

1.2.1 (2017-11-13)

- TODO Issue #19
- Make search results distinct. (Pull Request #31)
- Add request.real_user for convenience. (Pull Request #32)
- Ensure default user queries are ordered to ensure consistency. (Pull Request #33)

1.1 (2017-01-26)

- Django 1.10 compatibility (get rid of deprecation warnings). (Issue #36)
- Use USERNAME_FIELD for sorting in admin to avoid custom User model issues. (Issue #37)
- Added test coverage and refactoring for admin filters.
- Updated data sent to signal_end signal to be uniform with signal_begin and documentation. (Issue #34)
- Updated middleware documentation. (Issue #33)

1.0.1 (2016-04-10)

- Fix migration issues with custom User models. (Issue #31, Pull Request #26)

1.0 (2016-02-14)

- Update to use User PK instead of ID. (Pull Request #20)
- Use proper URL tag for user search, listing templates. (Pull Requests #21, #22)
- Add Impersonation Log support. (Issue #7, Issue #28, Pull Request #23)
- Add support for Django 1.9 (Pull Request #24)
- Adding unicode_literals for Py3 compatibility. (Issue  #29)

0.9.2 (2015-08-24)

- Add http refer specific setting because it broke prevoius usage. (Issue #24, Refs Issue #17)

0.9.1 (2015-04-16)

- Fix unicode issue with redirect variables. (Issue #21)
- Add redirect to previous impersonation screen. (Issue #17, Pull Request #17)
- Django 1.8 compatibility. (Pull Request #19)

0.9.0 (2014-09-30)

- Split search query into terms. (Pull Request #15)
- Edge case bug addressing different versions of Django in different environments. (Issue #15)
- Moved LOGIN_URL to function to avoid circular import issues. (Pull Request #14)
- Customize search fields and query type. (Issue #14, Pull Request #13)
- Django 1.7 compat changes. (Refs Pull Request #16)

0.8.1 (2013-11-09)

- Store user ID for Django 1.6 serialization support. (Issue #12, Pull Request #11)
- Updated Authors & Changelog